# gds-metadata-api

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/gds_metadata/: __init__.py  _scanner.c  _scanner.pyx  api.py  cli.py  models.py  parser.py  records.py  sources.py
